--- a/Finals/about.html
+++ b/Finals/about.html
@@ -30,19 +30,25 @@
                 <h2>ABOUT</h2>
             </div>
         </header>
-        <p>Hey,I'm an undergraduate that just finished learning from algonquin college. I studied under the IMD
-            deparment which I was able learn some basic graphic design, coding, wordpress etc. I'm a 19 year old
-            indiviual
-            that's a advance learning and working experiance with coding, photography and videography
-        </p>
-        <div class="profile-card">
-            <img src="./images/me.JPG" alt="me">
-            <h3>Iprinye Wilcox</h3>
-            <p>Algonquin College</p>
-            <i id="socials" class="fab fa-twitter-square"></i>
-            <i id="socials" class="fab fa-youtube-square"></i>
-            <i id="socials" class="fab fa-instagram-square"></i>
-            <p><button class="profile-button">Hire Me</button></p>
+        <div class="about-wrap">
+            <div>
+                <p>Hey,I'm an undergraduate that just finished learning from algonquin college. I studied under the IMD
+                    deparment which I was able learn some basic graphic design, coding, wordpress etc. I'm a 19 year old
+                    indiviual
+                    that's a advance learning and working experiance with coding, photography and videography
+                </p>
+            </div>
+            <div class="profile-card">
+                <img src="./images/me.JPG" alt="me">
+                <h3>Iprinye Wilcox</h3>
+                <p>Algonquin College</p>
+                <div>
+                    <i id="socials" class="fab fa-twitter-square"></i>
+                    <i id="socials" class="fab fa-youtube-square"></i>
+                    <i id="socials" class="fab fa-instagram-square"></i>
+                </div>
+                <p><button class="profile-button">Hire Me</button></p>
+            </div>
         </div>
         <footer>
             <div class="foot">
