--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -2,110 +2,130 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+  <title>Bootstrap</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <p>1.Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque error ex aspernatur enim
-                    consequuntur
-                    nisi ipsum, laboriosam illum, eligendi architecto aliquid odit iure dolore totam iusto cupiditate
-                    quaerat sint omnis.</p>
-            </div>
-            <div class="col">
-                <p>2.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati necessitatibus autem quia,
-                    quod, dolores deleniti tempora laborum accusamus a quaerat natus fugit molestias tenetur
-                    distinctio at similique officia temporibus dignissimos. </p>
-            </div>
-            <div class="col">
-                <p>3.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias accusamus perspiciatis ratione ex
-                    suscipit neque cum illum libero maiores velit eos cumque reprehenderit, veniam reiciendis dolorem
-                    dignissimos? Dolorem, ex qui?</p>
-            </div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col-8">
-                <p>A)Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat ratione dignissimos
-                    perspiciatis.
-                    Maiores deserunt quo, inventore culpa officiis esse possimus aspernatur labore enim velit? Quidem
-                    illum
-                    commodi ipsam facilis soluta.</p>
-            </div>
-            <div class="col-4">
-                <p>B}Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores saepe ducimus, quaerat sed ex
-                    quisquam
-                    quos officia exercitationem, perferendis repellendus facilis cupiditate soluta fugiat, iusto eaque
-                    quasi. Cum, assumenda qui?</p>
-            </div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col-md-4 col-lg-8">
-                <p>4.Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt earum blanditiis provident
-                    adipisci!
-                    Amet sunt, voluptatem impedit recusandae, corporis libero nobis labore alias fugit ratione, eligendi
-                    dolorum eos mollitia nisi!</p>
-            </div>
-            <div class="col-md-8 col-lg-4">
-                <p>5.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus animi mollitia, cum, dicta
-                    quasi
-                    blanditiis cupiditate corrupti nulla est, excepturi repudiandae veniam iste odio soluta illum.
-                    Laboriosam suscipit mollitia natus.</p>
-            </div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col-sm-5 col-md-8 col-xl-3">
-                <p>7.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde enim consequatur sit, autem animi
-                    quae
-                    dicta doloribus fuga illum nesciunt blanditiis commodi facere esse hic debitis reiciendis ab nihil
-                    repudiandae?</p>
-            </div>
-            <div class="col-sm-7 col-md-4 col-xl-9">
-                <p>8.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque consequatur molestias porro. Aliquam
-                    laboriosam, rem officia, dicta incidunt mollitia, iste eveniet quasi exercitationem vitae ea
-                    cupiditate?
-                    Ad modi quis dolores.</p>
-            </div>
-        </div>
-        <hr>
-        <div class="col-md-5 offset-7">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis debitis nostrum repellat possimus, minima
-                quod error illum sit ducimus adipisci voluptatem fuga itaque eligendi molestiae unde ipsa accusantium
-                laudantium iusto!</p>
-        </div>
-        <section class="bg-info ac-bg">
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat nesciunt consectetur sequi,
-                            quis
-                            veniam
-                            non pariatur quo consequatur voluptate expedita. Adipisci magni officia iusto ex dolore
-                            aliquam
-                            provident assumenda voluptates?</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+  <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">HOME</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">About</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Service
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Pizza</a></li>
+              <li><a class="dropdown-item" href="#">Delivery</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Menu</a></li>
+            </ul>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
     </div>
+  </nav>
+  <h1 class="text-center">Welcome To Fetoomi's Pokemon Card Deals</h1>
+  <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make
+    it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+  <div class="text-center">
+    <button type="button" class="btn btn-primary">Order Now</button>
+    <button type="button" class="btn btn-secondary">Check Out</button>
+  </div>
+  <!-- starting page -->
+  <hr>
+  <div class="container marketing">
+    <h1 class="text-center m-lg-5">ABOUT US</h1>
+    <!-- Three columns of text below the carousel -->
+    <div class="row">
+      <div class="col-lg-4">
+        <img class="rounded-circle d-block mx-auto ms-lg-1"
+          src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+          alt="Generic placeholder image" width="140" height="140">
+        <h2 class=" text-mx-lg-center">Jeff Wilcox</h2>
+        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
+          vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus
+          magna.</p>
+        <p><a class="btn btn-secondary" href="#" role="button">Know more »</a></p>
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4">
+        <img class="rounded-circle d-block mx-auto ms-lg-1"
+          src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+          alt="Generic placeholder image" width="140" height="140">
+        <h2>Mina Wilcox</h2>
+        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis
+          consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+        </p>
+        <p><a class="btn btn-secondary" href="#" role="button">Know more »</a></p>
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4 ">
+        <img class="rounded-circle d-block mx-auto ms-lg-1"
+          src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+          alt="Generic placeholder image" width="140" height="140">
+        <h2>Prinye Wilcox</h2>
+        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
+          felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
+          massa justo sit amet risus.</p>
+        <p><a class="btn btn-secondary" href="#" role="button">Know more »</a></p>
+      </div><!-- /.col-lg-4 -->
+    </div><!-- /.row -->
+
+
+    <!-- START THE FEATURETTES -->
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span>
+        </h2>
+        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
+          semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+          commodo.</p>
+      </div>
+      <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500"
+          style="width: 500px; height: 500px;"
+          src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22500%22%20height%3D%22500%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20500%20500%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_17884f4194c%20text%20%7B%20fill%3A%23AAAAAA%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A25pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_17884f4194c%22%3E%3Crect%20width%3D%22500%22%20height%3D%22500%22%20fill%3D%22%23EEEEEE%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22185.1171875%22%20y%3D%22261.1%22%3E500x500%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+          data-holder-rendered="true">
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <footer class="container">
+      <p class="float-right"><a href="#">Back to top</a></p>
+      <p>© 2020-2021 Fetomi Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+    </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
     </script>
 </body>
 
