making changes for both bootstrap and finals

--- a/Finals/about.html
+++ b/Finals/about.html
@@ -39,7 +39,7 @@
                 </p>
             </div>
             <div class="profile-card">
-                <img src="./images/me.JPG" alt="me">
+                <img src="./images/Image of me.JPG" alt="second image of me" class="profile-image">
                 <h3>Iprinye Wilcox</h3>
                 <p>Algonquin College</p>
                 <div>
@@ -47,7 +47,7 @@
                     <i id="socials" class="fab fa-youtube-square"></i>
                     <i id="socials" class="fab fa-instagram-square"></i>
                 </div>
-                <p><button class="profile-button">Hire Me</button></p>
+                <button class="profile-button">Hire Me</button>
             </div>
         </div>
         <footer>
