--- a/Finals/portfilio.html
+++ b/Finals/portfilio.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Finals</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -31,31 +32,48 @@
                 <h2>Portfilio</h2>
             </div>
         </header>
-        <p>Here are some of my work that were done for some of my clients</p>
-        <div>
-            <div class="portfolio-card">
-                <h3>Photography</h3>
-                <img class="portfilo" src="./images/portfilio8.JPG" alt="portfilio">
-            </div>
-            <div class="portfolio-card">
-                <h3>Photography</h3>
-                <img class="portfilo" src="./images/portfilio6.JPG" alt="portfilio">
-            </div>
-            <div class="portfolio-card">
-                <h3>Photography</h3>
-                <img class="portfilo" src="./images/portfilio9.JPG" alt="portfilio">
-            </div>
-            <div class="portfolio-card">
-                <h3>Web-development</h3>
-                <img class="portfilo" src="./images/portfilio2.png" alt="portfilio">
-            </div>
-            <div class="portfolio-card">
-                <h3>Web-development</h3>
-                <img class="portfilo" src="./images/portfilio.png" alt="portfilio">
-            </div>
-            <div class="portfolio-card">
-                <h3>Web-development</h3>
-                <img class="portfilo" src="./images/portfilio4.png" alt="portfilio">
+        <div class="portfolio-wrap">
+            <p>Here are some of my work that were done for some of my clients</p>
+            <div class="portfolio-container">
+                <div class="portfolio-card">
+                    <h3>Photography</h3>
+                    <img class="portfilo" src="./images/portfilio8.JPG" alt="portfilio">
+                </div>
+
+                <div class="portfolio-card">
+                    <h3>Photography</h3>
+                    <img class="portfilo" src="./images/portfilio6.JPG" alt="portfilio">
+                </div>
+
+                <div class="portfolio-card">
+                    <h3>Photography</h3>
+                    <img class="portfilo" src="./images/portfilio9.JPG" alt="portfilio">
+                </div>
+
+                <div class="portfolio-card">
+                    <h3>Photography</h3>
+                    <img class="portfilo" src="./images/photography portfolio.JPG" alt="portfilio">
+                </div>
+
+                <div class="portfolio-card">
+                    <h3>Web-development</h3>
+                    <img class="portfilo" src="./images/portfilio2.png" alt="portfilio">
+                </div>
+
+                <div class="portfolio-card">
+                    <h3>Web-development</h3>
+                    <img class="portfilo" src="./images/bootstrap.png" alt="portfilio">
+                </div>
+
+                <div class="portfolio-card">
+                    <h3>Web-development</h3>
+                    <img class="portfilo" src="./images/portfilio.png" alt="portfilio">
+                </div>
+
+                <div class="portfolio-card">
+                    <h3>Web-development</h3>
+                    <img class="portfilo" src="./images/portfilio4.png" alt="portfilio">
+                </div>
             </div>
         </div>
 
