finishing tablet layout

--- a/Finals/about.html
+++ b/Finals/about.html
@@ -53,10 +53,10 @@
         <footer>
             <div class="foot">
                 <p>@copyright of Fetomi</p>
-                <i id="socials" class="fab fa-twitter-square"></i>
-                <i id="socials" class="fab fa-facebook-square"></i>
-                <i id="socials" class="fab fa-youtube-square"></i>
-                <i id="socials" class="fab fa-instagram-square"></i>
+                <i id="socials-footer" class="fab fa-twitter-square"></i>
+                <i id="socials-footer" class="fab fa-facebook-square"></i>
+                <i id="socials-footer" class="fab fa-youtube-square"></i>
+                <i id="socials-footer" class="fab fa-instagram-square"></i>
             </div>
         </footer>
     </main>
