--- a/Finals/portfilio.html
+++ b/Finals/portfilio.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Finals</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -55,10 +55,6 @@
                     <img class="portfilo" src="./images/photography portfolio.JPG" alt="portfilio">
                 </div>
 
-                <div class="portfolio-card">
-                    <h3>Web-development</h3>
-                    <img class="portfilo" src="./images/portfilio2.png" alt="portfilio">
-                </div>
 
                 <div class="portfolio-card">
                     <h3>Web-development</h3>
@@ -67,12 +63,19 @@
 
                 <div class="portfolio-card">
                     <h3>Web-development</h3>
-                    <img class="portfilo" src="./images/portfilio.png" alt="portfilio">
+                    <img class="portfilo" src="./images/portfolio 10.png" alt="portfilio">
                 </div>
 
                 <div class="portfolio-card">
                     <h3>Web-development</h3>
-                    <img class="portfilo" src="./images/portfilio4.png" alt="portfilio">
+                    <img class="portfilo" src="./images/portfilio2.png" alt="portfilio">
+                </div>
+
+                <div class="portfolio-card">
+                    <h3>Web-development</h3>
+                    <img class="portfilo"
+                        src="./images/screencapture-127-0-0-1-5500-midterm-index-html-2021-04-02-09_28_31.png"
+                        alt="portfilio">
                 </div>
             </div>
         </div>
@@ -80,10 +83,10 @@
         <footer>
             <div class="foot">
                 <p>@copyright of Fetomi</p>
-                <i id="socials" class="fab fa-twitter-square"></i>
-                <i id="socials" class="fab fa-facebook-square"></i>
-                <i id="socials" class="fab fa-youtube-square"></i>
-                <i id="socials" class="fab fa-instagram-square"></i>
+                <i id="socials-footer" class="fab fa-twitter-square"></i>
+                <i id="socials-footer" class="fab fa-facebook-square"></i>
+                <i id="socials-footer" class="fab fa-youtube-square"></i>
+                <i id="socials-footer" class="fab fa-instagram-square"></i>
             </div>
         </footer>
     </main>
