--- a/Finals/service.html
+++ b/Finals/service.html
@@ -34,27 +34,31 @@
         </header>
         <div class="card-wrap">
             <div class="card">
-                <div>
-                    <img src="./images/WEB-development.jpeg" alt=" a laptop" class="service">
-                    <div class="card-container">
+                <div class="card-card">
+                    <img src="./images/Coding.png" alt=" a laptop" class="service">
+                    <div class="card-text">
                         <h3>Web-development</h3>
                         <button>Learn more</button>
                     </div>
                 </div>
             </div>
-            <div>
-                <div class="card">
+        </div>
+        <div>
+            <div class="card">
+                <div class="card-card">
                     <img src="./images/Photography.JPG" alt="a photo" class="service">
-                    <div class="card-container">
+                    <div class="card-text">
                         <h3>Photography</h3>
                         <button>Learn more</button>
                     </div>
                 </div>
             </div>
-            <div>
-                <div class="card">
+        </div>
+        <div>
+            <div class="card">
+                <div class="card-card">
                     <img src="./images/videography.jpg" alt="a camera" class="service">
-                    <div class="card-container">
+                    <div class="card-text">
                         <h3>Videography</h3>
                         <p>I don't have any of my work for this on display yet but it will surely come true</p>
                         <button>Coming soon!!</button>
@@ -62,14 +66,14 @@
                 </div>
             </div>
         </div>
-        </div>
+
         <footer>
             <div class="foot">
                 <p>@copyright of Fetomi</p>
-                <i id="socials" class="fab fa-twitter-square"></i>
-                <i id="socials" class="fab fa-facebook-square"></i>
-                <i id="socials" class="fab fa-youtube-square"></i>
-                <i id="socials" class="fab fa-instagram-square"></i>
+                <i id="socials-footer" class="fab fa-twitter-square"></i>
+                <i id="socials-footer" class="fab fa-facebook-square"></i>
+                <i id="socials-footer" class="fab fa-youtube-square"></i>
+                <i id="socials-footer" class="fab fa-instagram-square"></i>
             </div>
         </footer>
     </main>
