--- a/Finals/index.html
+++ b/Finals/index.html
@@ -26,11 +26,13 @@
     <main>
         <div class="landingpage">
             <div class="container-text">
-                <h1>Hello I'm</h1>
-                <h2>Prinye Wilcox</h2>
+                <h1>Welcome to Fetomi's freelancer webisite</h1>
+                <h2>Hello I'm Prinye Wilcox</h2>
                 <p>A freelancer for web development, photography and videography</p>
-                <button class="hire">Hire Me</button>
-                <button class="work">My work</button>
+                <div id="landingpage-button">
+                    <button class="hire">Hire Me</button>
+                    <button class="work">My work</button>
+                </div>
             </div>
             <div>
                 <img class="me" src="./images/me.JPG" alt="an image of me">
