--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -48,36 +48,39 @@
       </div>
     </div>
   </nav>
-  <h1 class="text-center">Welcome To Fetoomi's Pokemon Card Deals</h1>
-  <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make
-    it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+  <h1 class="text-center">Welcome To World Of Bootstrap</h1>
+  <p class="lead text-muted">Bootstrap is the most popular CSS Framework for developing responsive and mobile-first
+    websites. It can also be a powerful toolkit - a collection of HTML, CSS, and JavaScript tools for creating and
+    building web pages and web applications.</p>
   <div class="text-center">
-    <button type="button" class="btn btn-primary">Order Now</button>
-    <button type="button" class="btn btn-secondary">Check Out</button>
+    <button type="button" class="btn btn-primary">Learn More</button>
+    <button type="button" class="btn btn-secondary">Try It Out</button>
   </div>
   <!-- starting page -->
   <hr>
   <div class="container marketing">
-    <h1 class="text-center m-lg-5">ABOUT US</h1>
+    <h1 class="text-center m-lg-5">ABOUT Bootstrap</h1>
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
         <img class="rounded-circle d-block mx-auto ms-lg-1"
           src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
           alt="Generic placeholder image" width="140" height="140">
-        <h2 class=" text-mx-lg-center">Jeff Wilcox</h2>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
-          vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus
-          magna.</p>
+        <h2 class=" text-mx-lg-center">Mobile First</h2>
+        <p>Bootstrap includes a responsive, mobile first fluid grid system that appropriately scales up to 12 columns as
+          the device or viewport size increases. An example can bee seen on the navbar, when reduce into a mobile screen
+          the navbar get rid of the the hyper link and uses a harmburger menu instead. The navbar changes each time
+          depending on the xreen sizes.</p>
         <p><a class="btn btn-secondary" href="#" role="button">Know more »</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img class="rounded-circle d-block mx-auto ms-lg-1"
           src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
           alt="Generic placeholder image" width="140" height="140">
-        <h2>Mina Wilcox</h2>
-        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis
-          consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+        <h2>Bootstrap components</h2>
+        <p>Bootstrap components are basic UI components/ elements that are used for benefit of the user experiance.
+          These include Typography, Tables, Forms, Buttons, Glyphicons, Dropdowns, Buttons and Input Groups, Navigation,
+          Pagination, Labels and Badges, Alerts, Progress Bars, Modals, Tabs, Accordions, Carousels, and many others.
         </p>
         <p><a class="btn btn-secondary" href="#" role="button">Know more »</a></p>
       </div><!-- /.col-lg-4 -->
@@ -85,11 +88,12 @@
         <img class="rounded-circle d-block mx-auto ms-lg-1"
           src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
           alt="Generic placeholder image" width="140" height="140">
-        <h2>Prinye Wilcox</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
-          felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-          massa justo sit amet risus.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">Know more »</a></p>
+        <h2>Bootstrap Grid System</h2>
+        <p>The Bootstrap Grid System is used for layout, specifically Responsive Layouts. The Grid is made up of
+          groupings of Rows & Columns inside 1 or more Containers. The Bootstrap Grid can be used to create a perfect
+          and powerful grid like this one which are displayed in 3 columns. Due to the mobile first it goes to straight
+          coloumns and grows into 3coloumns</p>
+        <p><a class="btn btn-secondary" href="#" role="button">Learn more »</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -99,11 +103,12 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span>
+        <h2 class="featurette-heading">How do I use Bootstrap. <span class="text-muted">Methods of using
+            bootstrap.</span>
         </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
-          semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-          commodo.</p>
+        <p class="lead">Step 1: Go to https://getbootstrap.com/
+          step 2: Once you reach the home page of the website of bootstrap(getbootstrap.com) click on the button that's says get started.
+        step 3: You can copy the starter pack to start with your first bootstrap work</p>
       </div>
       <div class="col-md-5">
         <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500"
@@ -115,33 +120,32 @@
     <hr>
 
     <div class="row align-item-sm-center">
-      <div class="card col-lg-4 g-7 " style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card mx-auto ms-lg-1 " style="width: 18rem;">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
+          <h5 class="card-title">What is A Card</h5>
+          <p class="card-text">A card is a flexible content container. It includes options for headers and footers, a
+            wide variety of content, contextual background colors, and powerful display options.</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
 
-      <div class="card col-lg-4 " style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card mx-auto ms-lg-1 " style="width: 18rem;">
+
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Example f Card</h5>
+          <p class="card-text">This layout and elements are perfect example of bootstrap cards.</p>
+          <a href="#" class="btn btn-primary">Know more</a>
         </div>
       </div>
 
-      <div class="card col-lg-4" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card mx-auto ms-lg-1s" style="width: 18rem;">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Why Use Bootstrap?</h5>
+          <p class="card-text">Easy to use
+            Responsive features
+            Mobile-first approach
+            Browser compatibility.</p>
+          <a href="#" class="btn btn-primary">Learn More</a>
         </div>
       </div>
     </div>
